ML Zoomcamp HW02: Linear Regression on Car Fuel Efficiency

--- a/01-intro/HW.ipynb
+++ b/01-intro/HW.ipynb
@@ -240,7 +240,9 @@
   {
    "cell_type": "markdown",
    "id": "2a5fe39c-114c-4355-9d34-e388dc1f742e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Q2. Records count\n",
     "How many records are in the dataset?"
